packages/compiler/tests/fixtures/valid/stdlib-template-expr.svelte
<script>
  let count = 42;
  let name = "world";
</script>
<text>{Math.floor(count)}</text>
<text>{name.toUpperCase()}</text>
