packages/compiler/tests/fixtures/invalid/dom-access.svelte
<script>
  const el = document.getElementById('foo')
</script>
<text>DOM</text>
